--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html class="bg-background" lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
+  <link rel="icon" href="favicon.svg">
   <title>Fisher Online Companion</title>
 </head>
 <body>
