feat: add seo meta tags and robots.txt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
-  <link rel="icon" href="favicon.svg">
+  <meta name="description" content="Fisher Online Companion is a third-party companion app for the game Fisher Online helping you to keep track of the different fishes you caught."/>
+  <meta property="og:title" content="Fisher Online Companion" />
+  <meta property="og:type" content="siteweb" />
+  <meta property="og:image" content="/images/main-fish.png" />
+  <meta property="og:description" content="Fisher Online Companion is a third-party companion app for the game Fisher Online helping you to keep track of the different fishes you caught." />
+  <link rel="icon" href="/favicon.svg">
   <title>Fisher Online Companion</title>
 </head>
 <body>
